Fixed link to style.css, rearranged purchase table

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel"stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+	<nav class="navbar navbar-inverse navbar-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-target="#myNavbar" data-toggle="collapse" aria-expanded="false">
@@ -33,51 +33,12 @@
 		</div>
 	</nav>
 
-	<!-- Jumbotron -->
-	<div class="jumbotron container-fluid">
-  		<h2>Popular Packages</h2>
-  		<div class="table-responsive">
-  			<table class="table-bordered table">
-  				<thead>
-			      <tr>
-			        <th>Cost</th>
-			        <th>Package</th>
-			      </tr>
-			    </thead>
-			    <tbody>
-			      <tr class="info">
-			        <td>$19.99</td>
-			        <td>September Package</td>
-			      </tr>
-			     <tr>
-			        <td>$19.99</td>
-			        <td>Winter Package</td>
-			      </tr>
-			      <tr>
-			        <td>$24.99</td>
-			        <td>Summer Package</td>
-			      </tr>
-			    </tbody>
-			   </table>
-  			<p>
-  			<span>
-  			<a class="btn btn-warning btn-sm" href="http://www.realclearpolitics.com/" role="button">View More Packages</a>
-  			<a class="btn btn-danger btn-sm" href="http://www.realclearpolitics.com/" role="button">View Latest Packages</a>
-  			<a class="btn btn-primary btn-sm" href="http://www.realclearpolitics.com/" role="button">View Latest News and Updates</a>
-  			<a class="btn btn-success btn-sm" href="http://www.realclearpolitics.com/" role="button">View Package Plans</a>
-  			</span>
-  			</p>
-  		</div>
-	</div>
-<!-- Jumbotron End -->
-
 <!-- Carousel -->
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<div id="carousel-example-generic" class="carousel slide img-dimensions" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
   </ol>
 
   <!-- Wrapper for slides -->
@@ -91,13 +52,6 @@
     </div>
     <div class="item">
       <center><img class="img-responsive" src="http://tscmrc.homestead.com/Social_Media.png" alt="Social Media Package" class="jg"></center>
-        <div class="carousel-caption">
-                <button type="button" class="btn btn-primary">Buy Today</button>
-        </div>
-
-    </div>
-    <div class="item">
-      <center><img class="img-responsive" src="img/brand3.jpg" alt="..." class="jg"></center>
         <div class="carousel-caption">
                 <button type="button" class="btn btn-primary">Buy Today</button>
         </div>
@@ -122,7 +76,7 @@
 	<div class="container">
 		<div class="row">
 		<center>
-		<h1>User Stories</h1>
+		<h1 class="underline">User Stories</h1>
 		</center>
 		</div>
 		<div class="row">
@@ -150,6 +104,46 @@
 		</div>
 	</div>
 <!-- Content End -->
+	<hr>
+
+	<!-- Jumbotron -->
+	<div class="jumbotron container-fluid">
+  		<h2>Popular Packages</h2>
+  		<div class="table-responsive">
+  			<table class="table-bordered table">
+  				<thead>
+			      <tr>
+			        <th>Cost</th>
+			        <th>Package</th>
+			      </tr>
+			    </thead>
+			    <tbody>
+			      <tr class="info">
+			        <td>$19.99</td>
+			        <td>September Package</td>
+			      </tr>
+			     <tr>
+			        <td>$22.99</td>
+			        <td>Winter Package</td>
+			      </tr>
+			      <tr>
+			        <td>$24.99</td>
+			        <td>Summer Package</td>
+			      </tr>
+			    </tbody>
+			</table>
+  			<p>
+  			<span>
+  			<a class="btn btn-warning btn-sm" href="http://www.realclearpolitics.com/" role="button">View More Packages</a>
+  			<a class="btn btn-danger btn-sm" href="http://www.realclearpolitics.com/" role="button">View Latest Packages</a>
+  			<a class="btn btn-primary btn-sm" href="http://www.realclearpolitics.com/" role="button">View Latest News and Updates</a>
+  			<a class="btn btn-success btn-sm" href="http://www.realclearpolitics.com/" role="button">View Package Plans</a>
+  			</span>
+  			</p>
+  		</div>
+	</div>
+<!-- Jumbotron End -->
+
 	<hr>
 <!-- Signup -->
 	<div class="container">
