Toggle Buttons+User Stories

--- a/index.html
+++ b/index.html
@@ -126,20 +126,27 @@
 		</center>
 		</div>
 		<div class="row">
+			<!--BUTTON DIV 1-->
 			<div class="col-xs-4 col-lg-4">
-				<h2>Donald Trump</h2>
-				<h3>Republican</h3>
-				<p>Donald John Trump (born June 14, 1946) is an American business magnate, investor, television personality, and author. Currently running for the office of President of the United States, he is the chairman and president of The Trump Organization and the founder of Trump Entertainment Resorts. Trump's lifestyle and outspoken manner, as well as his books and his media appearances, have made him an American celebrity. He hosted The Apprentice,a US TV show.</p>
-				<a class="btn btn-danger btn-sm" href="https://en.wikipedia.org/wiki/donald_trump" role="button">Bibliography</a>
-			</div>
-			
+				<!--TEXT DIV 1-->
+				<div id="user-1">
+					<h2>John Smith</h2>
+					<h3>41, Brooklyn, New York</h3>
+					<p>"As a father of three, full time employee, and little league coach on the side, it can be hard to find time in my schedule for anything. When my kids start running low on school supplies, I continuously put it off until my kids are left with almost nothing to use. Next I have to load up my car for our venture to the nearest supply store, a headache just getting my kids into the car let alone getting them to sit still. Finally, entering the store I'm bombarded with bright sale signs, contradicting prices, and finding exactly what my kids need. Who could forget that monstrous line beginning at register one and mazing around the store seemingly with no end. When register one closed as I was approaching the front of the line I knew there had to be a better way."</p>
+				</div><!--END TEXT DIV 1-->
+				<a id="user-1-button"class="btn btn-danger btn-sm" role="button">John's Story</a>
+			</div><!--END BUTTON DIV 1-->
 			<div class="col-xs-4 col-lg-4">
-				<h2>Bernie Sanders</h2>
-				<h3>Democrat</h3>
-				<p>Bernard "Bernie" Sanders (born September 8, 1941) is an American politician and the junior United States Senator from Vermont. He has announced his candidacy for the Democratic nomination in the 2016 presidential election. <br>
-				Sanders is the longest-serving independent in U.S. congressional history. A self-described democratic socialist,he favors policies similar to those of social democratic parties in Europe, particularly those of Scandinavia. He caucuses with the Democratic Party and has been the ranking minority member on the Senate Budget Committee since January 2015.</p>
-				<a class="btn btn-primary btn-sm" href="https://en.wikipedia.org/wiki/bernie_sanders" role="button">Bibliography</a>
+				<!--TEXT DIV 2-->
+				<div class="user-2">
+					<h2>Jane Doe</h2>
+					<h3>36, Staten Island, New York</h3>
+					<p>"...The hardest part of school shopping is definitely finding the best deal I can. I always find myself spending too much money on things my child doesn't need or spot better deals the next day. With fluctuating prices and difficult to navigate stores, I feel lost in the chaotic sea of people, pricing, and supplies. "</p>
+				</div>
+				<!--END TEXT DIV 2-->
+				<a class="btn btn-primary btn-sm" href="https://en.wikipedia.org/wiki/bernie_sanders" role="button">Read Jane's Story</a>
 			</div>
+			<!--END BUTTON DIV 2-->
 			
 			<div class="col-xs-4 col-lg-4">
 				<h2>Hillary Clinton</h2>
@@ -209,5 +216,6 @@
 
 	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script type="text/javascript"src="script.js"></script>
 </body>
 </html>
